[project]
name = "autonomous-agent-stack"
version = "0.1.0"
description = "Modern multi-agent orchestration framework powered by MASFactory"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
